# rag-search-engine

./: .gitignore  README.md  pyproject.toml
ai-serving/: Dockerfile  README.md  docker-compose.yml  pyproject.toml  test_inference.py
ai-serving/app/: app.py
ai-serving/models/: clip.py  gemma3.py
ai-serving/serving/: app.py  schemas.py
ai-serving/serving/models/: clip.py  gemma3.py
ai-serving/src/: app.py  schemas.py
ai-serving/src/models/: clip.py  gemma3.py
cli/: augmented_generation_cli.py  describe_image_cli.py  evaluation_cli.py  hybrid_search_cli.py  keyword_search_cli.py  multimodal_search_cli.py  semantic_search_cli.py  test.py  test_gemini.py
cli/lib/: augmented_generation.py  evaluation_search.py  hybird_search.py  inverted_index.py  keyword_search.py  llm_model.py  multimodel_search.py  query_enhancement.py  reranking.py  schemas.py  search_utils.py  semantic_search.py
