[project]
name = "rag-search-engine"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "accelerate>=1.12.0",
    "dotenv>=0.9.9",
    "google-genai>=1.57.0",
    "nltk==3.9.1",
    "numpy>=2.3.4",
    "pydantic>=2.12.4",
    "pylance>=0.38.3",
    "pyright>=1.1.407",
    "sentence-transformers>=5.2.0",
    "torch>=2.9.1",
    "torchaudio>=2.9.1",
]
